add well experience

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,11 @@
+- employer: WELL Health, Inc.
+  position: Software Engineer
+  start_date: February 2021
+  end_date: Present
 - employer: Novacoast, Inc.
   position: Developer III
   start_date: February 2019
-  end_date: Present
+  end_date: February 2021
 - employer: UCSB ETS
   position: End User Technician
   start_date: March 2017
