--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      permalink: "/blog/:title:output_ext"
+      permalink: "/blog/:year/:month/:day/:title:output_ext"
   - scope:
       path: ""
     values:
